--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -12,8 +12,56 @@
         height: 18px;
     }
 
-    &__nav {
+    &__btn-menu {
+        width: 40px;
+        height: 30px;
+        position: relative;
+        display: none;
+        margin-right: 150px;
 
+        div {
+            width: 100%;
+            height: 2px;
+            background-color: $primery-color;
+            border-radius: 2px;
+            position: absolute;
+            left: 0;
+            transition: $trs;
+
+            &:nth-child(1) {
+                top: 4px;
+            }
+            
+            &:nth-child(2) {
+                top: 10px;
+            }
+            
+            &:nth-child(3) {
+                top: 16px;
+            }
+        }
+
+        &--active {
+            div {
+                &:nth-child(1) {
+                    top: 13px;
+                    transform: rotate(45deg);
+                }
+
+                &:nth-child(2) {
+                    display: none;
+                }
+
+                &:nth-child(3) {
+                    top: 13px;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
+    }
+
+    &__nav {
+        margin-left: auto;
         
         &-list {
             display: flex;
@@ -38,6 +86,59 @@
             
             &--active {
                 color: $primery-color;
+            }
+        }
+    }
+}
+
+@media(max-width: 1024px) {
+    .header {
+        &__logo {
+            margin-left: 20px;
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .header {
+        &__btn-menu {
+            display: block;
+            z-index: 3;
+            
+            
+
+            &--active {
+                position: fixed;
+                right: 15px;
+                top: 330px;
+            }
+        }
+
+        &__nav {
+            position: fixed;
+            right: 0;
+            top: 0;
+            background-color: #000;
+            width: 50%;
+            min-width: 250px;
+            bottom: 0;
+            text-align: center;
+            font-size: 26px;
+            padding: 380px 0 20px;
+            z-index: 2;
+            transform: translateX(455px);
+            transition: $trs;
+
+            &--active {
+                transform: translateX(0);
+            }
+
+            &-list {
+                flex-direction: column;
+            }
+
+            &-item {
+                padding: 0 15px 20px;
             }
         }
     }
