--- a/styles/components/mail.scss
+++ b/styles/components/mail.scss
@@ -25,7 +25,7 @@
     }
 
     &__input {
-        width: 250px;
+        max-width: 250px;
         height: 40px;
         border: none;
         outline: none;
@@ -61,6 +61,30 @@
 
         &:hover {
             background-color: #007bac;;
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .mail {
+        height: 180px;
+
+        &__title {
+            font-size: 18px;
+            margin-left: 20px;
+        }
+
+        &__btn {
+            margin-top: 20px;
+            max-width: 100px;
+
+            &--link {
+                font-size: 10px;
+            }
+        }
+
+        form {
+            display: block;
         }
     }
 }
