--- a/styles/components/story.scss
+++ b/styles/components/story.scss
@@ -16,7 +16,7 @@
             width: 50px;
             height: 2px;
             bottom: -13px;
-            left: 450px;
+            left: 47%;
             background-color: $primery-color;
         }
     }
@@ -44,6 +44,7 @@
 
     &__descr {
         font-size: 13px;
+        
     }
 
     
@@ -65,6 +66,57 @@
             color: $white;
             max-width: 110px;
             padding: 15px 0 0 14px;
+        }
+    }
+}
+
+@media(max-width: 1024px) {
+    .story {
+
+        &__wrap {
+            display: block;
+        }
+
+        &__info {
+            margin: 0 auto;
+            display: flex;
+            max-width: 800px;
+        }
+
+        &__bg {
+            justify-content: right;
+            margin-right: 50px;
+        }
+    }
+}
+
+@media(max-width: 768px) {
+    .story {
+        &__name {
+            font-size: 16px;
+        }
+
+        &__bg {
+            justify-content: space-between;
+            margin-right: 0;
+        }
+    }
+}
+
+@media(max-width: 530px) {
+    .story {
+        &__info {
+            display: block;
+        }
+
+        &__bg {
+            display: block;
+            margin-top: 20px;
+
+            &-item {
+                margin-left: 130px;
+            }
+
         }
     }
 }
