--- a/styles/components/capabilities.scss
+++ b/styles/components/capabilities.scss
@@ -107,12 +107,13 @@
 
 @media(max-width: 768px) {
     .capabilities {
+        padding: 30px 0 55px 0;
 
         &__header {
            display: flex;
            flex-direction: column;
-           justify-content: center;
-            
+           justify-content: center;  
+           margin-bottom: 39px; 
         }
 
         &__title {
@@ -125,7 +126,8 @@
         }
 
         &__descr {
-            margin-top: 40px;
+            margin-top: 30px;
+            max-width: 80%;
         }
 
         &__btn {
