--- a/styles/components/story.scss
+++ b/styles/components/story.scss
@@ -92,13 +92,22 @@
 
 @media(max-width: 768px) {
     .story {
+        padding: 26px 30px;
+
+        &__title {
+            margin-bottom: 34px;
+            
+            &::before {
+                left: 43%;
+            }
+        }
+
         &__name {
             font-size: 16px;
         }
 
         &__bg {
             justify-content: space-between;
-            margin-right: 0;
         }
     }
 }
@@ -114,7 +123,7 @@
             margin-top: 20px;
 
             &-item {
-                margin-left: 130px;
+                margin: 0 auto;
             }
 
         }
