--- a/styles/components/footer.scss
+++ b/styles/components/footer.scss
@@ -6,6 +6,7 @@
 
     &__wrap {
         display: flex;
+        padding: 20px;
     }
 
     &__title {
@@ -116,6 +117,8 @@
             line-height: 13px;
             letter-spacing: 0.85px;
             padding-top: 22px;
+            width: 90%;
+            margin: 0 auto;
         }
     }
 }
@@ -124,7 +127,7 @@
     .footer {
         &__wrap {
             display: block;
-            margin-left: 100px;
+            // margin-left: 50px;
         }
 
         &__links {
