--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -66,6 +66,7 @@
         &-list {
             display: flex;
             font-family: $main-font-family; 
+            margin: 0 15px;
         }
 
         &-item {
