--- a/styles/components/header.scss
+++ b/styles/components/header.scss
@@ -89,6 +89,7 @@
                 color: $primery-color;
             }
         }
+
     }
 }
 
@@ -104,34 +105,31 @@
     .header {
         &__btn-menu {
             display: block;
-            z-index: 3;
-            
-            
 
             &--active {
                 position: fixed;
-                right: 12%;
-                top: 330px;
+                right: 10%;
+                top: 10%;
+                z-index: 3;
             }
         }
 
         &__nav {
-            position: fixed;
-            right: 0;
+            position: fixed;;
+            right: -100%;
             top: 0;
             background-color: #000;
-            width: 50%;
+            width: 100%;
             min-width: 250px;
             bottom: 0;
             text-align: center;
             font-size: 26px;
             padding: 380px 0 20px;
             z-index: 2;
-            transform: translateX(455px);
             transition: $trs;
 
             &--active {
-                transform: translateX(0);
+                right: 0;
             }
 
             &-list {
