--- a/styles/style.css
+++ b/styles/style.css
@@ -127,7 +127,8 @@ a {
   text-align: center;
   letter-spacing: 3.7px;
   position: absolute;
-  animation: jamping 0.9s linear infinite;
+  -webkit-animation: jamping 0.9s linear infinite;
+          animation: jamping 0.9s linear infinite;
 }
 
 @media (max-width: 768px) {
@@ -136,6 +137,19 @@ a {
   }
   .hero__subtitle {
     font-size: 16px;
+  }
+}
+@-webkit-keyframes jamping {
+  0% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    transform: translateY(20px);
+    opacity: 0;
   }
 }
 @keyframes jamping {
@@ -231,30 +245,29 @@ a {
 @media (max-width: 768px) {
   .header__btn-menu {
     display: block;
-    z-index: 3;
   }
   .header__btn-menu--active {
     position: fixed;
-    right: 12%;
-    top: 330px;
+    right: 10%;
+    top: 10%;
+    z-index: 3;
   }
   .header__nav {
     position: fixed;
-    right: 0;
+    right: -100%;
     top: 0;
     background-color: #000;
-    width: 50%;
+    width: 100%;
     min-width: 250px;
     bottom: 0;
     text-align: center;
     font-size: 26px;
     padding: 380px 0 20px;
     z-index: 2;
-    transform: translateX(455px);
     transition: all 0.3s linear;
   }
   .header__nav--active {
-    transform: translateX(0);
+    right: 0;
   }
   .header__nav-list {
     flex-direction: column;
@@ -565,6 +578,14 @@ a {
 .mail__input:focus {
   border: 1px solid #00A4E5;
 }
+.mail__input::-moz-placeholder {
+  font-size: 14px;
+  padding: 11px 0 10px 16px;
+}
+.mail__input:-ms-input-placeholder {
+  font-size: 14px;
+  padding: 11px 0 10px 16px;
+}
 .mail__input::placeholder {
   font-size: 14px;
   padding: 11px 0 10px 16px;
@@ -599,6 +620,14 @@ a {
   }
   .mail__input {
     max-width: 100px;
+  }
+  .mail__input::-moz-placeholder {
+    font-size: 10px;
+    padding: 5px 0 5px 5px;
+  }
+  .mail__input:-ms-input-placeholder {
+    font-size: 10px;
+    padding: 5px 0 5px 5px;
   }
   .mail__input::placeholder {
     font-size: 10px;
@@ -728,6 +757,4 @@ a {
   .footer__social {
     margin-left: 0;
   }
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
